--- a/styles/index.css
+++ b/styles/index.css
@@ -23,7 +23,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(/images/hung.jpg);
+  background-image: url(./images/hung.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: aliceblue;
