--- a/styles/index.css
+++ b/styles/index.css
@@ -23,7 +23,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(https://cdn.pixabay.com/photo/2015/07/19/10/00/school-work-851328_960_720.jpg);
+  background-image: url(/hung.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: aliceblue;
